# discord-emote-downloader

./: .gitignore  Cargo.toml  README.md  example-settings.json
src/: archive.rs  downlaod.rs  guilds.rs  main.rs  utils.rs
