[package]
name = "discord-emote-downlaoder"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
structopt = "0.3.26"
tokio = { version = "1.40.0", features = ["full"] }
zip = "2.2.0"
